# Heart

./: .gitignore  README.md  main.py  pyproject.toml
conf/: apiConf.yaml
plug-ins/: heartCore.py  hello_plugin.py
scr/: MODEL.py  PATH.py  async_signalbus.py  logger.py  prompt_engineering.py
scr/util/: logger.py  looper_build.py  signalbus.py
