[project]
name = "Heart"
version = "0.3.0"
model_version = "0.1.0"
description = "A heart for your bot"
authors = [
    { name = "Shulincooky", email = "Shulincooky@yeah.net" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
]
plugins_path = "plug-ins"

dependencies = [
    # You can go to the website of PyTouch to install the dependencies
    "numpy>=2.1.2",
    "tomli>=2.2.1",
    "colorlog>=6.9.1",
    "aiohttp>=3.12.13",
    "pyyaml>=1.20.1",

]


[project.urls]
"Homepage" = "https://github.com/Shulincooky/Heart"
#"Documentation" = "https://Heart.readthedocs.io"
#"Bug Tracker" = "https://github.com/Shulincooky/Heart/issues"